--- a/Homework/Day_001_HW.ipynb
+++ b/Homework/Day_001_HW.ipynb
@@ -192,16 +192,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "1. 提升業績\n",
     "2. 叫車app\\ 車上的GPS的移動紀錄、跟所花費時間、賺的錢\\政府的openData\n",
-    "3. x"
+    "3. 以結構話資料為主\n",
+    "4. 迴歸問題：MAE、RMSE...等"
    ]
   }
  ],
