--- a/Homework/21_HW.ipynb
+++ b/Homework/21_HW.ipynb
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](./Data/21_HW_圖.png)"
+    "![](./ML100Day/Data/21_HW_圖.png)"
    ]
   }
  ],
