--- a/Ans/22_Ans.ipynb
+++ b/Ans/22_Ans.ipynb
@@ -30,32 +30,19 @@
    "source": [
     "# 作業1\n",
     "* 下列A~E五個程式區塊中，哪一塊是特徵工程?\n",
+    "> 程式區塊 C\n",
     "\n",
-    "ANS:區塊Ｃ"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 作業2\n",
     "* 對照程式區塊 B 與 C 的結果，請問那些欄位屬於\"類別型欄位\"? (回答欄位英文名稱即可) \n",
+    "> Name, Sex, Ticket, Cabin, Embarked 等五個欄位  \n",
+    ">  \n",
+    "> 註 : 像是 Pclass 這樣的欄位, 雖然就意義上而言是類別型欄位, 但因為裡面都是數值,  \n",
+    "> 因此 Python 讀取時會先將其判定為數值欄位, 希望同學了解語言判定與人為理解上的落差,  \n",
+    "> 因為 Python 不須宣告物件型別, 都是自動判定, 這點雖然方便, 卻也是初學者常常遇到的困難所在\n",
     "\n",
-    "ANS :Name, Sex, Ticket, Cabin, Embarked 等五個欄位\n",
-    "\n",
-    "註 : 像是 Pclass 這樣的欄位, 雖然就意義上而言是類別型欄位, 但因為裡面都是數值,\n",
-    "因此 Python 讀取時會先將其判定為數值欄位, 希望同學了解語言判定與人為理解上的落差,\n",
-    "因為 Python 不須宣告物件型別, 都是自動判定, 這點雖然方便, 卻也是初學者常常遇到的困難所在"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 作業3\n",
     "* 續上題，請問哪個欄位是\"目標值\"?\n",
-    "\n",
-    "ANS : Survived"
+    "> Survived 是目標值"
    ]
   },
   {
@@ -80,7 +67,7 @@
     "import numpy as np\n",
     "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
     "\n",
-    "data_path = '/Users/Apple/pyds/資料科學馬拉松/ML100Day/Data/'\n",
+    "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "df_train.shape"
@@ -231,6 +218,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Python\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:475: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -368,12 +363,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -390,12 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -408,10 +397,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -433,9 +419,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
