--- a/Ans/24_Ans.ipynb
+++ b/Ans/24_Ans.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "# 作業 : (Kaggle)鐵達尼生存預測\n",
     "https://www.kaggle.com/c/titanic"
@@ -27,13 +29,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "# 作業1\n",
     "* 觀察範例，在房價預測中調整標籤編碼(Label Encoder) / 獨熱編碼 (One Hot Encoder) 方式，  \n",
     "對於線性迴歸以及梯度提升樹兩種模型，何者影響比較大?\n",
-    "\n",
-    "ANS : 梯度提升樹 影響較大"
+    "> 線性迴歸時, 獨熱編碼不僅時間花費很多, 準確率也大幅下降  \n",
+    "梯度提升樹時, 分數有小幅提升, 執行時間則約為兩倍  \n",
+    "可見獨熱不僅計算時間會增加不少, 也不太適合用在線性迴歸上"
    ]
   },
   {
@@ -174,9 +179,8 @@
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
     "\n",
-    "data_path = '/Users/Apple/pyds/資料科學馬拉松/ML100Day/Data/'\n",
+    "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "\n",
@@ -312,15 +316,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "# 作業2\n",
-    "* 鐵達尼號例題中，標籤編碼 / 獨熱編碼又分別對預測結果有何影響? (Hint : 參考今日範例)"
+    "* 鐵達尼號例題中，標籤編碼 / 獨熱編碼又分別對預測結果有何影響? (Hint : 參考今日範例)\n",
+    "> 羅吉斯迴歸時, 獨熱編碼執行時間較長, 但分數僅微幅提升"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -328,17 +335,12 @@
      "output_type": "stream",
      "text": [
       "shape : (891, 5)\n",
-      "score : 0.7800138095537004\n",
-      "time : 0.19196581840515137 sec\n"
+      "score : 0.780004837244799\n",
+      "time : 0.02396845817565918 sec\n"
      ]
     }
    ],
    "source": [
-    "# 標籤編碼 + 羅吉斯迴歸\n",
-    "\n",
-    "\"\"\"\n",
-    "Your Code Here\n",
-    "\"\"\"\n",
     "# 標籤編碼 + 羅吉斯迴歸\n",
     "df_temp = pd.DataFrame()\n",
     "for c in df.columns:\n",
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -361,27 +363,30 @@
      "output_type": "stream",
      "text": [
       "shape : (891, 2429)\n",
-      "score : 0.8013307388111229\n",
-      "time : 1.2747318744659424 sec\n"
+      "score : 0.8013346043513216\n",
+      "time : 0.10138106346130371 sec\n"
      ]
     }
    ],
    "source": [
     "# 獨熱編碼 + 羅吉斯迴歸\n",
-    "\n",
-    "\"\"\"\n",
-    "Your Code Here\n",
-    "\"\"\"\n",
     "df_temp = pd.get_dummies(df)\n",
-    "train_X = df_temp[:len(train_Y)]\n",
+    "train_X = df_temp[:train_num]\n",
     "estimator = LogisticRegression()\n",
     "start = time.time()\n",
     "print(f'shape : {train_X.shape}')\n",
     "print(f'score : {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}')\n",
-    "print(f'time : {time.time() - start} sec')\n",
-    "\n",
-    "\n"
+    "print(f'time : {time.time() - start} sec')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -400,9 +405,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
