--- a/Ans/25_Ans.ipynb
+++ b/Ans/25_Ans.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "# 作業 : (Kaggle)鐵達尼生存預測\n",
     "https://www.kaggle.com/c/titanic"
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +159,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +174,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "data_path = '/Users/Apple/pyds/資料科學馬拉松/ML100Day/Data/'\n",
+    "data_path = 'data/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "\n",
@@ -186,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +288,7 @@
        "4            373450  None        S  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,15 +310,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "source": [
     "# 作業2\n",
-    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?"
+    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?\n",
+    "> 均值編碼比較好，但這主要是因為'Name'與'Ticket'兩個欄位的種類數眾多  \n",
+    "如果均值編碼時加入這裡個欄位的均值會過擬合( overfitting )  \n",
+    "因此下列程式碼中，需要先移除這兩個欄位，再做均值編碼"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -324,8 +331,8 @@
      "output_type": "stream",
      "text": [
       "shape : (891, 5)\n",
-      "score : 0.7800138095537004\n",
-      "time : 0.20809006690979004 sec\n"
+      "score : 0.780004837244799\n",
+      "time : 0.03291201591491699 sec\n"
      ]
     }
    ],
@@ -339,14 +346,38 @@
     "start = time.time()\n",
     "print(f'shape : {train_X.shape}')\n",
     "print(f'score : {cross_val_score(estimator, train_X, train_Y, cv=5).mean()}')\n",
-    "print(f'time : {time.time() - start} sec')\n",
-    "\n",
-    "\n"
+    "print(f'time : {time.time() - start} sec')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name        891\n",
+       "Sex           2\n",
+       "Ticket      681\n",
+       "Cabin       148\n",
+       "Embarked      4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 如果欄位類別數太多, 需要先剔除, 否則會 overfit (正確率會到達 1.0)\n",
+    "train_X.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -354,8 +385,8 @@
      "output_type": "stream",
      "text": [
       "shape : (891, 5)\n",
-      "score : 0.835019772770071\n",
-      "time : 0.06543397903442383 sec\n"
+      "score : 0.8350366889413987\n",
+      "time : 0.013962030410766602 sec\n"
      ]
     }
    ],
@@ -372,8 +403,17 @@
     "start = time.time()\n",
     "print(f'shape : {train_X.shape}')\n",
     "print(f'score : {cross_val_score(estimator, data, train_Y, cv=5).mean()}')\n",
-    "print(f'time : {time.time() - start} sec')\n"
+    "print(f'time : {time.time() - start} sec')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -392,9 +432,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
