--- a/Example/25_Mean_Encoder.ipynb
+++ b/Example/25_Mean_Encoder.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "[5 rows x 43 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
      "text": [
       "shape : (1460, 43)\n",
       "score : 0.6615606866851301\n",
-      "time : 0.07173395156860352 sec\n"
+      "time : 0.06781291961669922 sec\n"
      ]
     }
    ],
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
      "text": [
       "shape : (1460, 43)\n",
       "score : 0.7624230403716957\n",
-      "time : 0.06129574775695801 sec\n"
+      "time : 0.06662821769714355 sec\n"
      ]
     }
    ],
@@ -529,10 +529,10 @@
     "# 均值編碼 + 線性迴歸\n",
     "data = pd.concat([df[:train_num], train_Y], axis=1)\n",
     "for c in df.columns:\n",
-    "    mean_df = data.groupby([c])['SalePrice'].mean().reset_index()\n",
-    "    mean_df.columns = [c, f'{c}_mean']\n",
-    "    data = pd.merge(data, mean_df, on=c, how='left')\n",
-    "    data = data.drop([c] , axis=1)\n",
+    "    mean_df = data.groupby([c])['SalePrice'].mean().reset_index()#依欄位中的類別對SalePrice做平均\n",
+    "    mean_df.columns = [c, f'{c}_mean']#將該欄位名做轉換成\n",
+    "    data = pd.merge(data, mean_df, on=c, how='left')#跟原本的欄位做何合併\n",
+    "    data = data.drop([c] , axis=1)#刪除原先的欄位\n",
     "data = data.drop(['SalePrice'] , axis=1)\n",
     "estimator = LinearRegression()\n",
     "start = time.time()\n",
@@ -640,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
