--- a/Homework/29_HW.ipynb
+++ b/Homework/29_HW.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,14 +190,14 @@
     "\"\"\"\n",
     "Your Code Here\n",
     "\"\"\"\n",
-    "mean_df = df.groupby(\"Pclass\")[\"Fare\"].mean().reset_index()\n",
+    "mean_df = df.groupby(\"Pclass\")[\"Fare\"].agg(np.median).reset_index()\n",
     "mean_df.columns = [\"Pclass\",\"Pclass_mean_Fare\"]\n",
     "df=pd.merge(df,mean_df, on=\"Pclass\" , how =\"left\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>7.2500</td>\n",
-       "      <td>13.675550</td>\n",
+       "      <td>8.0500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -254,7 +254,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>71.2833</td>\n",
-       "      <td>84.154687</td>\n",
+       "      <td>60.2875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -263,7 +263,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>7.9250</td>\n",
-       "      <td>13.675550</td>\n",
+       "      <td>8.0500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -272,7 +272,7 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>53.1000</td>\n",
-       "      <td>84.154687</td>\n",
+       "      <td>60.2875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -281,7 +281,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>8.0500</td>\n",
-       "      <td>13.675550</td>\n",
+       "      <td>8.0500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -289,14 +289,14 @@
       ],
       "text/plain": [
        "   Pclass   Age  SibSp  Parch     Fare  Pclass_mean_Fare\n",
-       "0       3  22.0      1      0   7.2500         13.675550\n",
-       "1       1  38.0      1      0  71.2833         84.154687\n",
-       "2       3  26.0      0      0   7.9250         13.675550\n",
-       "3       1  35.0      1      0  53.1000         84.154687\n",
-       "4       3  35.0      0      0   8.0500         13.675550"
+       "0       3  22.0      1      0   7.2500            8.0500\n",
+       "1       1  38.0      1      0  71.2833           60.2875\n",
+       "2       3  26.0      0      0   7.9250            8.0500\n",
+       "3       1  35.0      1      0  53.1000           60.2875\n",
+       "4       3  35.0      0      0   8.0500            8.0500"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "0.70041428661101"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
        "0.7049086686334819"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
