--- a/Homework/30_HW.ipynb
+++ b/Homework/30_HW.ipynb
@@ -344,43 +344,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Pclass', 'Fare']\n"
+      "['Pclass', 'Age', 'Parch', 'Fare']\n"
      ]
     }
    ],
    "source": [
-    "# 篩選相關係數1\n",
-    "high_list=list(corr[(corr[\"Survived\"] > 0.1) | (corr[\"Survived\"]< -0.1) ].index)\n",
+    "# 篩選相關係數 > 0.05 ,<-0.05\n",
+    "high_list=list(corr[(corr[\"Survived\"] > 0.05) | (corr[\"Survived\"]< -0.05) ].index)\n",
     "high_list.pop(0)\n",
     "print(high_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6790973573535873"
+       "0.703785073127864"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,32 +386,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pclass', 'Fare']\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "# 篩選相關係數2\n",
+    "# 篩選相關係數 >0.1 , <-0.1\n",
     "\"\"\"\n",
     "Your Code Here\n",
     "\"\"\"\n",
-    "print(high_list)"
+    "high_list=list(corr[(corr[\"Survived\"] > 0.1) | (corr[\"Survived\"]< -0.1) ].index)\n",
+    "high_list.pop(0)\n",
+    "print(high_list)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6790973573535873"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# 特徵2 + 邏輯斯迴歸\n",
     "train_X = MMEncoder.fit_transform(df[high_list])\n",
@@ -435,19 +439,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.39126312, -0.1355752 , -0.        ,  0.03068895,  0.        ])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "from sklearn.linear_model import Lasso\n",
     "\"\"\"\n",
     "Your Code Here, select parameter alpha \n",
     "\"\"\"\n",
+    "L1_Reg = Lasso(alpha=0.005)\n",
     "train_X = MMEncoder.fit_transform(df)\n",
     "L1_Reg.fit(train_X, train_Y)\n",
     "L1_Reg.coef_"
@@ -455,14 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Pclass', 'Age', 'Parch']"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "from itertools import compress\n",
     "L1_mask = list((L1_Reg.coef_>0) | (L1_Reg.coef_<0))\n",
@@ -472,14 +489,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6992906911053921"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# L1_Embedding 特徵 + 線性迴歸\n",
     "train_X = MMEncoder.fit_transform(df[L1_list])\n",
