--- a/Homework/33_HW.ipynb
+++ b/Homework/33_HW.ipynb
@@ -31,7 +31,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "泛化能力越高代表模型在沒看過的測試資料上的表現能夠越好"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,7 +45,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "分類問題可使用交叉商 (Cross Entropy)。回歸問題可使用均方差 (Mean Square Error)\n"
+   ]
   }
  ],
  "metadata": {
