--- a/Example/36_evaluation_metrics.ipynb
+++ b/Example/36_evaluation_metrics.ipynb
@@ -70,9 +70,9 @@
     "model = LinearRegression() # 建立回歸模型\n",
     "model.fit(X, y) # 將資料放進模型訓練\n",
     "prediction = model.predict(X) # 進行預測\n",
-    "mae = metrics.mean_absolute_error(prediction, y) # 使用 MAE 評估(預估,實際值)\n",
-    "mse = metrics.mean_squared_error(prediction, y) # 使用 MSE 評估(預估,實際值)\n",
-    "r2 = metrics.r2_score(prediction, y) # 使用 r-square 評估(預估,實際值)\n",
+    "mae = metrics.mean_absolute_error(prediction, y) # 使用 MAE 評估\n",
+    "mse = metrics.mean_squared_error(prediction, y) # 使用 MSE 評估\n",
+    "r2 = metrics. (prediction, y) # 使用 r-square 評估\n",
     "print(\"MAE: \", mae)\n",
     "print(\"MSE: \", mse)\n",
     "print(\"R-square: \", r2)"
@@ -248,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
