--- a/Homework/39_HW.ipynb
+++ b/Homework/39_HW.ipynb
@@ -29,13 +29,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "1.\n",
-    "2加大逞罰力度，"
+    "1.當模型的目標函數加入 L1 正則化後，會傾向讓用不到的特徵的權重降為 ０，因此實務上可以替我們做到 feature selection 的功用\n",
+    "https://www.youtube.com/watch?v=PeQeKeeGu3A&t=4s\n",
+    "\n",
+    "\n",
+    "2.可以，Ridge Regeression 就是透過 L2 進行權重的 decay，進而減少特徵的共線性帶來的 Over-fitting 情形。後面的課程會提到一種非監督室的方法叫做 PCA, Principal Component Analysis 主成分分析，是一種用來消除特徵具有共線性的方法，而 Ridge Regression 有些地方其實與 PCA 非常類似，建議同學可以先預習這些文章。\n",
+    "\n",
+    "https://taweihuang.hpd.io/2018/06/10/pca-與-ridge-regression-的關係/\n",
+    "\n",
+    "https://zhuanlan.zhihu.com/p/32500133"
    ]
   }
  ],
