--- a/Homework/050_Stacking_HW.ipynb
+++ b/Homework/050_Stacking_HW.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 作業 : (Kaggle)鐵達尼生存預測\n",
+    "## 作業 : (Kaggle)鐵達尼生存預測\n",
     "***\n",
     "- 分數以網站評分結果為準, 請同學實際將提交檔(*.csv)上傳試試看  \n",
     "https://www.kaggle.com/c/titanic/submit"
